ingress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-app
  name: todo-app-service
  labels:
    name: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - port: 443
      protocol: TCP
      name: https
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: my-app
  name: http-ingress
spec:
  rules:
  - host: my-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 80
            port:
              number: 443
#in der Hostdatei braucht es noch einen Eintrag 172.23.6.165 (IP der VM)    my-app.com
